--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=train
-#spring.profiles.active=test
+spring.profiles.active=test
 
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/trains
-spring.datasource.username=user
-spring.datasource.password=pass
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
@@ -13,5 +13,5 @@ spring.jpa.show-sql=true
 
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+spring.flyway.clean-disabled=false
 flyway.repair=always
-
